# otgate

./: .gitignore  LICENSE  README.md  README.ru.md  pyproject.toml
.github/workflows/: ci.yml
assets/: make_demo_svg.py
docs/: threat-model.md
examples/: agents.yaml  demo.py  opcua_demo.py  opcua_sim_server.py  reactor_policy.yaml
examples/policies/: diagnostics.yaml  optimizer.yaml
otgate/: __init__.py  agents.py  approval.py  audit.py  auth.py  engine.py  gateway.py  models.py  policy.py  rate_history.py  server.py
otgate/backends/: __init__.py  asyncua_backend.py  base.py  fake.py
tests/: conftest.py  test_agents.py  test_approval.py  test_asyncua_reconnect.py  test_audit.py  test_auth.py  test_engine.py  test_failclosed.py  test_integration_asyncua.py  test_policy.py  test_rate_history.py  test_shadow.py  test_toolchain.py
